fixed home form button alignment on mobile

--- a/src/components/Forms/HomeForm/HomeForm.scss
+++ b/src/components/Forms/HomeForm/HomeForm.scss
@@ -22,6 +22,7 @@
     margin-right: 12px;
     display: flex;
     justify-content: center;
+    margin: 0 auto;
 }
 
 .home-form-button {
@@ -58,12 +59,17 @@
         width: 100% !important;
         margin-bottom: 12px;
     }
+
+    .home-form-button {
+        margin: 0 auto;
+    }
 }
 
 @media only screen and (max-width: 425px) {
     .home-form-button-container {
         width: 100% !important;
-        margin-right: 12px;
+        //margin-right: 12px;
+        margin: 0 auto;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column-reverse;
@@ -77,7 +83,7 @@
     }
 
     .home-form-learn-more {
-        margin-right: 0px;
+        //margin-right: 0px;
     }
 }
 
